# devops-with-kubernetes

./: .gitignore  README.md  cloud-provider-kind.yaml  kind-config.yaml
cluster-management/: gateway.yaml  persistent-volume.yaml  query.promql
log_output/: Dockerfile  app.py  pyproject.toml
log_output/manifests/: configmap.yaml  deployment.yaml  ingress.yaml  route.yaml  service.yaml
log_output/templates/: index.html  layout.html
log_reader/: app.py  pyproject.toml
log_reader/manifests/: deployment.yaml  persistent-volume-claim.yaml  service.yaml
pingpong/: Dockerfile  app.py  pyproject.toml  schema.sql
pingpong/manifests/: config.yaml  deployment.yaml  postgres.yaml  route.yaml  service.yaml  shared-ingress.yaml
random-wikipedia-article/: Dockerfile  pyproject.toml  script.py
random-wikipedia-article/manifests/: cronjob.yaml
todo-app/: app.py  pyproject.toml  util.py
todo-app/manifests/: deployment.yaml  ingress.yaml  persistent-volume-claim.yaml  service.yaml  todo-app-config.yaml
todo-app/templates/: index.html  layout.html
todo-backend/: app.py  pyproject.toml  schema.sql
todo-backend/manifests/: deployment.yaml  postgres.yaml  secret.enc.yaml  service.yaml  todo-backend-config.yaml
