[tool.poetry]
name = "log-output"
version = "0.1.0"
description = ""
authors = ["jobatabs <2370315+jobatabs@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
