[project]
name = "random-wikipedia"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonatan Noponen",email = "2370315+jobatabs@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
